Update TranscriptUtil.java